# advent_of_code

./: .gitignore  README.md
2020/: answers  p01a.sh  p01b.sh  p02a.sh  p02a_better.sh  p02b.sh  p02b_better.sh  p03a.awk  p03a.sh  p03a_awk.sh  p03b.sh  p04a.awk  p04a.sh  p04b.awk  p04b.sh  p05a.sh  p05b.sh  p06a.awk  p06a.py  p06b.awk  p06b.py  p07a.awk  p07b.awk  p08a.awk  p08b.awk  p09a.awk  p09b.awk  p10a.awk  p10b.awk  p11a.awk  p11b.awk  p12a.awk  p12b.awk  p13a.awk  p13b.awk  p14a.awk  p14b.awk  p15a.awk  p15b.awk  p16a.awk  (+19 more)
2020/ada/aoc20/: aoc20.gpr  aoc20_main.adb
2020/ada/aoc20/common/: harness.adb  harness.ads  utils.adb  utils.ads
2020/ada/aoc20/solutions/: p01a_pkg.adb  p01a_pkg.ads  p01b_pkg.adb  p01b_pkg.ads  p02a_pkg.adb  p02a_pkg.ads  solutions.adb
2020/input/: a.txt  b.txt  p01_test.txt
2021/: answers
2021/ada/aoc21/: answers  aoc21.gpr  aoc21_main.adb
2021/ada/aoc21/common/: harness.adb  harness.ads  utils.adb  utils.ads
2021/ada/aoc21/docker/: Dockerfile
2021/ada/aoc21/solutions/: p00.adb  p00.ads  p01.adb  p01.ads  p01a_pkg.adb  p01a_pkg.ads  p01b_pkg.adb  p01b_pkg.ads  p02.adb  p02.ads  p03.adb  p03.ads  p04.adb  p04.ads  p05.adb  p05.ads  (+41 more)
2021/other/: p08b.py  p16.erl  p24.py
2022/erlang/: p04.escript
2022/miniZinc/: p19.mzn
2022/ocaml/: answers
2022/ocaml/aoc22/: .ocamlformat  dune-project  setup
2022/ocaml/input/: p15.txt  p15_test.txt  p22.txt
2023/haskell/: answers  aoc23.cabal
2023/haskell/aoc23/: Common.hs  Main.hs  p01.hs  p02.hs  p03.hs  p04.hs  p05.hs  p06.hs  p07.hs  p08.hs  p09.hs  p10.hs  p11.hs  p12.hs
(+28 files in other folders)
