cabal-version:      2.4
name:               aoc23
version:            0.1.0.0
author:             Vlad
maintainer:         me@villiros.com
extra-source-files: CHANGELOG.md

-- library
--     exposed-modules:  MyLib
--     build-depends:    base ^>=4.17.2.0
--     hs-source-dirs:   aoc23
--     default-language: Haskell2010

executable aoc23
    main-is:          Main.hs
    other-modules:    Common, P01, P02, P03
    build-depends:
        base ^>=4.17.2.0,
        cmdargs,
        time
        --aoc23

    hs-source-dirs:   aoc23
    default-language: Haskell2010
